# dbcppp

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  linux.yml
examples/: CMakeLists.txt
examples/BasicUsage/: main.cpp
include/dbcppp/: Attribute.h  AttributeDefinition.h  BitTiming.h  CApi.h  EnvironmentVariable.h  Export.h  Iterator.h  Message.h  Network.h  Network2C.h  Network2DBC.h  Network2Functions.h  Node.h  Signal.h  SignalFilter.h  SignalGroup.h  SignalMultiplexerValue.h  SignalType.h  ValueEncodingDescription.h  ValueTable.h
output/include/dbcppp/: Attribute.h  AttributeDefinition.h  AttributeImpl.h  BitTiming.h  BitTimingImpl.h  CApi.h  EnvironmentVariable.h  Export.h  Helper.h  Message.h  MessageImpl.h  Network.h  Network2C.h  Network2DBC.h  NetworkImpl.h  Node.h  Signal.h  SignalType.h  ValueTable.h  span.h
output/lib/: dbcppp.lib  libdbcppp.lib
src/: AttributeDefinitionImpl.cpp  AttributeDefinitionImpl.h  AttributeImpl.cpp  AttributeImpl.h  BitTimingImpl.cpp  BitTimingImpl.h  CApi.cpp  CMakeLists.txt  DBCAST2Network.cpp  EndianConfig.h.in  EnvironmentVariableImpl.cpp  EnvironmentVariableImpl.h  Helper.h  KCD2Network.cpp  MessageImpl.cpp  MessageImpl.h  Network2C.cpp  Network2DBC.cpp  Network2Human.cpp  NetworkImpl.cpp  NetworkImpl.h  NodeImpl.cpp  NodeImpl.h  SignalGroup.h  SignalGroupImpl.cpp  SignalGroupImpl.h  SignalImpl.cpp  SignalMultiplexerValueImpl.cpp  SignalMultiplexerValueImpl.h  SignalTypeImpl.h  ValueTableImpl.cpp  ValueTableImpl.h
src/Examples/BasicUsage/: CMakeLists.txt  main.cpp  test.h
src/Test/: CMakeLists.txt  Config.h.in  Core_Lanes_Host_protocol.dbc  Core_Objects_protocol.dbc  DBCParsingCApi.cpp  DBCParsingCppApi.cpp  DBCParsingSinglineComment.cpp  DBCWithSingleLineCommentsParsing.cpp  Decoding.cpp  Definition.xsd  Test.dbc  Test.ini  Test.kcd  TestFD.ini  Test_single_comments.dbc  Test_single_line_comments.dbc  main.cpp
src/Vector/: CMakeLists.txt
src/Vector/DBC/: Attribute.h  AttributeDefinition.h  AttributeObjectType.h  AttributeRelation.h  AttributeValueType.h  BitTiming.h  ByteOrder.h  CMakeLists.txt  EnvironmentVariable.h  ExtendedMultiplexor.h  Helper.h  Message.h  Network.h  Node.h  Signal.cpp  Signal.h  SignalGroup.h  SignalType.h  Spirit.cpp  Spirit.h  ValueDescriptions.h  ValueTable.h  ValueType.h  platform.h
src/dbcppp/: Attribute.cpp  Attribute.h  AttributeDefinition.h  AttributeDefinitionImpl.cpp  AttributeDefinitionImpl.h  AttributeImpl.cpp  AttributeImpl.h  BitTiming.h  BitTimingImpl.cpp  BitTimingImpl.h  CApi.cpp  CApi.h  CMakeLists.txt  ConvertGrammarStructorToCppStructure.cpp  ConvertGrammarStructorToCppStructure.h  ConvertGrammarStructureToCppStructure.cpp  ConvertGrammarStructureToCppStructure.h  DBCAST2Network.cpp  DBCAST2Network.h  DBC_Grammar.cpp  DBC_Grammar.h  EnvironmentVariable.h  EnvironmentVariableImpl.cpp  EnvironmentVariableImpl.h  Export.h  Helper.cpp  Helper.h  MakeSignal.cpp  MakeSignal.h  MakeSignal16.cpp  MakeSignal24.cpp  MakeSignal32.cpp  MakeSignal40.cpp  MakeSignal48.cpp  MakeSignal56.cpp  MakeSignal64.cpp  MakeSignal8.cpp  Message.h  MessageImpl.cpp  MessageImpl.h  (+24 more)
src/libdbcppp/: AttributeDefinitionImpl.cpp  AttributeDefinitionImpl.h  AttributeImpl.cpp  AttributeImpl.h  BitTimingImpl.cpp  BitTimingImpl.h  CApi.cpp  CMakeLists.txt  Config.h.in  DBCAST2Network.cpp  DBCGrammarPEGLT.h  DBCParser.h  DBCX3.cpp  DBCX3.h  DBCX3AdaptStructs.inl  DBC_Grammar.h  EndianConfig.h  EnvironmentVariableImpl.cpp  EnvironmentVariableImpl.h  Helper.h  KCD2Network.cpp  KcdXsd.cpp  MessageImpl.cpp  MessageImpl.h  Network2C.cpp  Network2DBC.cpp  Network2Human.cpp  NetworkImpl.cpp  NetworkImpl.h  NodeImpl.cpp  NodeImpl.h  SignalGroupImpl.cpp  SignalGroupImpl.h  SignalImpl.cpp  SignalImpl.h  SignalMultiplexerValueImpl.cpp  SignalMultiplexerValueImpl.h  SignalTypeImpl.cpp  SignalTypeImpl.h  ValueEncodingDescriptionImpl.cpp  (+5 more)
src/libdbcppp/cmake/: libdbcpppConfig.cmake
tests/: APITests.cpp  CMakeLists.txt  Catch2.cpp  Catch2.h  Config.h  Config.h.in  DBCParserTest.cpp  DBCParsingCApi.cpp  DBCParsingCppApi.cpp  DBCWithSingleLineCommentsParsing.cpp  Decoding.cpp  DecodingTest.cpp  GrammarTest.cpp  PEGTL_grammar_test.cpp  Test.dbc.tmp  main.cpp
tests/test_files/dbc/: CamelCaseEmpty.dbc  TestFD.dbc  Test_single_comments.dbc  abs.dbc  add_two_dbc_files_1.dbc  add_two_dbc_files_2.dbc  attributes.dbc  bad_message_length.dbc  big_numbers.dbc  bus_comment.dbc  choices.dbc  cp1252.dbc  dbcppp_issue_58.dbc  dump_signal_choices.dbc  emc32.dbc  empty_choice.dbc  empty_ns.dbc  floating_point.dbc  foobar.dbc.BA_DEF_REL_not_supported  issue_163_newline.dbc  issue_168.DBC  issue_184_extended_mux_cascaded.dbc  issue_184_extended_mux_cascaded_dumped.dbc  issue_184_extended_mux_independent_multiplexors.dbc  issue_184_extended_mux_independent_multiplexors_dumped.dbc  issue_184_extended_mux_independent_multiplexors_dumped.ini  issue_184_extended_mux_multiple_values.dbc  issue_184_extended_mux_multiple_values_dumped.dbc  issue_199.dbc  issue_199_extended.dbc  issue_207_sig_plus.dbc  issue_228.dbc  issue_62.dbc  issue_63.dbc  issue_90.dbc  j1939.dbc  long_names.dbc  long_names_multiple_relations.dbc  long_names_multiple_relations_dumped.dbc  message-dlc-zero.dbc  (+27 more)
tools/dbcppp/: CMakeLists.txt  main.cpp
